compiler/testData/diagnostics/tests/annotations/NonAnnotationClass.kt
// FIR_IDENTICAL
class Foo

<!NOT_AN_ANNOTATION_CLASS!>@Foo<!> class Bar